--- a/LIGHT/configs/pretrain_light.yaml
+++ b/LIGHT/configs/pretrain_light.yaml
@@ -2,11 +2,11 @@
 output_dir: './_runs/'  
 
 # model settings
-exp_name: "layoutLMv4_scene_pretrain"
-base_model: "layoutLMv4"
+exp_name: "test"
+base_model: "light"
 pretrained_model_name: "microsoft/layoutlmv3-base"
-resume: True
-checkpoint_path: "/users/8/lin00786/work/MapText/text_linking/_runs/layoutLMv4_scene_pretrain__v2/models/model_epoch_1700.pth"
+resume: False
+checkpoint_path: ""
 
 # add_poly: True
 add_wpa_loss: True
@@ -15,13 +15,13 @@ max_position_embeddings: 1024
 padding_token_id: -100
 mask_token_id: -1
 max_len: 32
-poly_pretrained_weights: "/users/8/lin00786/work/MapText/text_linking/_weights/pretrain_poly/model_epoch_3000.pth"
+poly_pretrained_weights: "./_weights/pretrain_poly/model_epoch_3000.pth"
 
 # training settings
 batch_size: 4
 num_epochs: 3000
 lr: 0.00005
-num_samples_per_epoch: 500
+num_samples_per_epoch: 200
 eval_every_epoch: 10
 save_every_epoch: 100
 warmup_ratio: 0.048
