--- a/LIGHT/configs/pretrain_poly.yaml
+++ b/LIGHT/configs/pretrain_poly.yaml
@@ -15,8 +15,8 @@ max_len: 32
 mask_ratio: 0.15
 
 # dataset settings
-train_datasets: ["MapText_train", "Rumsey1_train", "Rumsey2_train"]
-train_data_probabilities: [0.4, 0.3, 0.3]
+train_datasets: ["MapText_train"] #, "Rumsey1_train", "Rumsey2_train"]
+train_data_probabilities: [0.4] # , 0.3, 0.3]
 train_data_shuffle: True
 val_dataset: "MapText_val"
 val_data_shuffle: False
@@ -28,7 +28,7 @@ num_samples_per_epoch: 200
 lr: 0.0001
 eval_every_epoch: 10
 save_every_epoch: 500
-warmup_ratio: 0.
+warmup_ratio: 0.1
 weight_decay: 0.01
 
 # Device configuration
